Basic logging for recommender api. Return books as jsons with info

--- a/recommender/templates/index.html
+++ b/recommender/templates/index.html
@@ -6,4 +6,9 @@
   	<input type="text" id="book_name" name="book_name"><br>
   	<input type="submit" value="Submit">
 </form>
+{% block body %}
+
+<p>This is a Flask application.</p>
+
+{% endblock %}
 </html>
